Movimeinto arreglado y boss a mitad hacer

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="card_game">
-    <meta name="keywords" content="card_game">
+    <meta name="description" content="ninja_survivor_2.0">
+    <meta name="keywords" content="ninja_survivor_2.0">
     <meta name="author" content="David">
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
     <link rel="stylesheet" href="styles.css">
-    <title>Juego</title>
+    <title>Ninja Survivor 2.0</title>
 </head>
 
 <body>
